--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js | ./node_modules/.bin/bunyan"
+    "start": "PORT=8082 INACTIVITY_TIMEOUT=60000 node index.js | ./node_modules/.bin/bunyan"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bunyan": "^1.8.1",
+    "validator": "^6.0.0",
     "ws": "^1.1.1"
   }
 }
